# Excel-Memory-Agent-EMA

./: .coverage  .gitignore  README.md  pyproject.toml
docs/: architecture_final.md  implementation_plan.md  mvp_design.md  mvp_design_v2.md  plan_review.md
ema/: __init__.py  cli.py  config.py  errors.py  excel_io.py  extract.py  llm.py  mcp_server.py  models.py  registry.py  schema.py  server.py  service.py
excel_memory_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: .coverage  conftest.py  test_cli.py  test_excel_io.py  test_extract.py  test_mcp_server.py  test_models.py  test_registry.py  test_schema.py  test_server.py  test_service.py
tests/fixtures/: make_fixtures.py
