[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-memory-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pydantic>=2.6",
    "mcp[cli]>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
ema-server = "ema.server:main"
ema = "ema.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that exercise slower workbook flows",
    "llm: marks tests that require a real local LLM",
]

[tool.setuptools.packages.find]
include = ["ema*"]
